# AutoEmail

./: .gitignore  main.py  pyproject.toml
backend/: .gitignore  learn.py
backend/app/: database.py  download.py  email_download.py  utils.py
frontend/app/: candidate.py  hr_app.py  senddb.py
frontend/backend/storage/web_uploads/: web_20251211_170141_wuyao _resume.docx  web_20251211_171539_123_resume.docx
