[project]
name = "autoemail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.0",
    "imbox>=0.9.8",
    "mammoth>=1.11.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
]
